--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,11 @@ dependencies {
     compile 'com.android.support:cardview-v7:27.0.2'
     compile 'com.android.support:recyclerview-v7:27.0.2'
     compile 'com.weiwangcn.betterspinner:library-material:1.1.0'
-
+    compile 'net.igenius:customcheckbox:1.3'
+    compile 'com.github.GwonHyeok:StickySwitch:0.0.15'
+    compile 'us.belka:androidtoggleswitch:1.2.2'
+    compile 'com.xw.repo:bubbleseekbar:3.10-lite'
+    compile 'com.wang.avi:library:2.1.3'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 }
 apply plugin: 'com.google.gms.google-services'
