--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,34 +19,38 @@ android {
         }
     }
 }
-
+ext.firebaseLibVersion = '15.0.0'
+ext.supportLibVersion = '27.1.1'
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.google.firebase:firebase-auth:12.0.1'
-    implementation 'com.google.android.gms:play-services-auth:12.0.1'
-    implementation 'com.google.firebase:firebase-database:12.0.1'
-    implementation 'com.google.firebase:firebase-core:12.0.1'
-    implementation 'com.google.firebase:firebase-messaging:12.0.1'
-    implementation 'com.google.firebase:firebase-firestore:12.0.1'
-    testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    implementation 'com.github.markushi:circlebutton:1.1'
-    implementation 'de.hdodenhof:circleimageview:2.2.0'
-    implementation 'com.android.support:appcompat-v7:27.1.0'
-    implementation 'com.android.support:design:27.1.0'
-    implementation 'com.github.bumptech.glide:glide:4.5.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
+    testImplementation 'junit:junit:4.12'
+    implementation "com.google.android.gms:play-services-auth:$firebaseLibVersion"
+    implementation "com.google.firebase:firebase-messaging:$firebaseLibVersion"
+    implementation "com.google.firebase:firebase-firestore:$firebaseLibVersion"
+    implementation "com.google.firebase:firebase-database:$firebaseLibVersion"
+    implementation "com.google.firebase:firebase-core:$firebaseLibVersion"
+    implementation "com.google.firebase:firebase-auth:$firebaseLibVersion"
+    implementation "com.android.support:recyclerview-v7:$supportLibVersion"
+    implementation "com.android.support:appcompat-v7:$supportLibVersion"
+    implementation "com.android.support:cardview-v7:$supportLibVersion"
+    implementation "com.android.support:design:$supportLibVersion"
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.github.AlbertGrobas:PolygonImageView:3a2b07f768'
-    implementation 'com.android.support:cardview-v7:27.1.0'
-    implementation 'com.android.support:recyclerview-v7:27.1.0'
     implementation 'com.weiwangcn.betterspinner:library-material:1.1.0'
-    implementation 'net.igenius:customcheckbox:1.3'
     implementation 'com.github.GwonHyeok:StickySwitch:0.0.15'
-    implementation 'us.belka:androidtoggleswitch:1.2.2'
-    implementation 'com.xw.repo:bubbleseekbar:3.10-lite'
-    implementation 'com.wang.avi:library:2.1.3'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+    implementation 'com.github.bumptech.glide:glide:4.5.0'
+    implementation 'com.github.markushi:circlebutton:1.1'
+    implementation 'com.xw.repo:bubbleseekbar:3.10-lite'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'us.belka:androidtoggleswitch:1.2.2'
+    implementation 'net.igenius:customcheckbox:1.3'
+    implementation 'com.wang.avi:library:2.1.3'
+    implementation 'com.robinhood.spark:spark:1.2.0'
+    implementation 'com.andkulikov:transitionseverywhere:1.7.9'
+
 }
 apply plugin: 'com.google.gms.google-services'
