--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,8 @@ ext.firebaseLibVersion = '15.0.0'
 ext.supportLibVersion = '27.1.1'
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
     testImplementation 'junit:junit:4.12'
     implementation "com.google.android.gms:play-services-auth:$firebaseLibVersion"
@@ -51,6 +51,8 @@ dependencies {
     implementation 'com.wang.avi:library:2.1.3'
     implementation 'com.robinhood.spark:spark:1.2.0'
     implementation 'com.andkulikov:transitionseverywhere:1.7.9'
+    implementation 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
+    implementation 'com.ogaclejapan.smarttablayout:utils-v4:1.6.1@aar'
 
 }
 apply plugin: 'com.google.gms.google-services'
