--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     implementation 'com.andkulikov:transitionseverywhere:1.7.9'
     implementation 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
     implementation 'com.ogaclejapan.smarttablayout:utils-v4:1.6.1@aar'
+    implementation 'com.thoughtbot:expandablerecyclerview:1.3'
+    implementation 'com.bignerdranch.android:expandablerecyclerview:1.0.3'
 
 }
 apply plugin: 'com.google.gms.google-services'
