--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="vyvital.fitz">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="true"
@@ -31,12 +32,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-        <activity android:name=".ExerciseActivity" />
+        <activity
+            android:name=".ExerciseActivity"
+            android:windowSoftInputMode="adjustNothing" />
         <activity android:name=".MuscleActivity" />
-        <activity android:name=".ProgressActivity"
-            android:windowSoftInputMode="adjustNothing">
-        </activity>
-        <activity android:name=".NutriActivity"/>
+        <activity
+            android:name=".ProgressActivity"
+            android:windowSoftInputMode="adjustNothing"></activity>
+        <activity android:name=".NutriActivity" />
+        <activity android:name=".WorkingOutActivity"></activity>
     </application>
 
 </manifest>
