--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,12 +27,11 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
     testImplementation 'junit:junit:4.12'
-    implementation "com.google.android.gms:play-services-auth:$firebaseLibVersion"
-    implementation "com.google.firebase:firebase-messaging:$firebaseLibVersion"
-    implementation "com.google.firebase:firebase-firestore:$firebaseLibVersion"
-    implementation "com.google.firebase:firebase-database:$firebaseLibVersion"
-    implementation "com.google.firebase:firebase-core:$firebaseLibVersion"
-    implementation "com.google.firebase:firebase-auth:$firebaseLibVersion"
+    implementation "com.google.android.gms:play-services-auth:15.0.1"
+    implementation "com.google.firebase:firebase-messaging:15.0.2"
+    implementation "com.google.firebase:firebase-database:15.0.1"
+    implementation "com.google.firebase:firebase-core:15.0.2"
+    implementation "com.google.firebase:firebase-auth:15.1.0"
     implementation "com.android.support:recyclerview-v7:$supportLibVersion"
     implementation "com.android.support:appcompat-v7:$supportLibVersion"
     implementation "com.android.support:cardview-v7:$supportLibVersion"
@@ -54,7 +53,8 @@ dependencies {
     implementation 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
     implementation 'com.ogaclejapan.smarttablayout:utils-v4:1.6.1@aar'
     implementation 'com.thoughtbot:expandablerecyclerview:1.3'
-    implementation 'com.bignerdranch.android:expandablerecyclerview:1.0.3'
+    implementation 'com.bignerdranch.android:expandablerecyclerview:3.0.0-RC1'
+    implementation 'com.github.natasam:DemoProgressViewsLibApp:5843c69b44'
 
 }
 apply plugin: 'com.google.gms.google-services'
