--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,8 @@ dependencies {
     implementation 'com.thoughtbot:expandablerecyclerview:1.3'
     implementation 'com.bignerdranch.android:expandablerecyclerview:3.0.0-RC1'
     implementation 'com.github.natasam:DemoProgressViewsLibApp:5843c69b44'
+    implementation ('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.11.0@aar'){
+        transitive=true }
 
 }
 apply plugin: 'com.google.gms.google-services'
