--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,8 +52,7 @@ dependencies {
     implementation 'com.andkulikov:transitionseverywhere:1.7.9'
     implementation 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
     implementation 'com.ogaclejapan.smarttablayout:utils-v4:1.6.1@aar'
-    implementation 'com.thoughtbot:expandablerecyclerview:1.3'
-    implementation 'com.bignerdranch.android:expandablerecyclerview:3.0.0-RC1'
+    implementation 'com.jaredrummler:material-spinner:1.2.5'
     implementation 'com.github.natasam:DemoProgressViewsLibApp:5843c69b44'
     implementation ('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.11.0@aar'){
         transitive=true }
