--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,13 @@ buildscript {
     repositories {
         google()
         jcenter()
-        maven {
-            url "https://jitpack.io"
-        }
+        maven { url "https://jitpack.io" }
+        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
         classpath 'com.google.gms:google-services:3.2.0'
+        classpath 'io.fabric.tools:gradle:1.25.4'
     }
 }
 allprojects {
@@ -19,6 +19,8 @@ allprojects {
         maven {
             url "https://jitpack.io"
         }
+        maven {
+            url 'https://maven.fabric.io/public' }
     }
 }
 
